Add project github ribbon.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     </style>
   </head>
   <body>
-  <script src="./build/main.js"></script>
+    <a href="https://github.com/gozala/interactivate">
+      <img style="z-index: 3; position: absolute; top: 0; right: 0; border: 0;"
+           src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"
+           alt="Fork me on GitHub"/>
+    </a>
+    <script src="./build/main.js"></script>
   </body>
 </html>
