Add Ctrl Enter shortcut for PC users.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ fibs(10)
 
 // Go ahead, type `// =>` on the next line and press enter!
 // You could also delete this outputs using simlpe backspace.
-// There is also a convinienc shortcut `⌘ + enter`.
+// There is also a convenience shortcut `⌘  Enter` on Mac and
+// `Ctrl Enter` for PC.
 
 // Another cool thing is that you can simply share snippets you've typed by
 // sharing URLs, note that code typed here is part of URL and it updates as
