Change page title.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en manifest=./build/cache.manifest>
   <head>
     <meta charset=utf-8>
-    <title>widgets</title>
+    <title>Interactivate</title>
     <link rel=stylesheet href=./build/codemirror.css />
     <link rel=stylesheet href=./build/solarized.css />
     <script src=./build/codemirror.js></script>
