--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=en manifest=./build/cache.manifest>
+<html lang=en>
   <head>
     <meta charset=utf-8>
     <title>Interactivate</title>
